; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_aldap.c_aldap_get_errno.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ypldap/extr_aldap.c_aldap_get_errno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aldap = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"success\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"parser failed\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"invalid filter\00", align 1
@.str.3 = private unnamed_addr constant [17 x i8] c"operation failed\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aldap_get_errno(%struct.aldap* %0, i8** %1) #0 {
  %3 = alloca %struct.aldap*, align 8
  %4 = alloca i8**, align 8
  store %struct.aldap* %0, %struct.aldap** %3, align 8
  store i8** %1, i8*** %4, align 8
  %5 = load %struct.aldap*, %struct.aldap** %3, align 8
  %6 = getelementptr inbounds %struct.aldap, %struct.aldap* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %16 [
    i32 128, label %8
    i32 129, label %10
    i32 131, label %12
    i32 130, label %14
  ]

8:                                                ; preds = %2
  %9 = load i8**, i8*** %4, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  br label %18

10:                                               ; preds = %2
  %11 = load i8**, i8*** %4, align 8
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0), i8** %11, align 8
  br label %18

12:                                               ; preds = %2
  %13 = load i8**, i8*** %4, align 8
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8** %13, align 8
  br label %18

14:                                               ; preds = %2
  %15 = load i8**, i8*** %4, align 8
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.3, i64 0, i64 0), i8** %15, align 8
  br label %18

16:                                               ; preds = %2
  %17 = load i8**, i8*** %4, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8** %17, align 8
  br label %18

18:                                               ; preds = %16, %14, %12, %10, %8
  %19 = load %struct.aldap*, %struct.aldap** %3, align 8
  %20 = getelementptr inbounds %struct.aldap, %struct.aldap* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
